[package]
name = "vroom"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[example]]
name = "fabric-rdma-initiator"
path = "examples/fabric-rdma/initiator.rs"

[[example]]
name = "fabric-rdma-server"
path = "examples/fabric-rdma/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
byteorder = "1"
lazy_static = "1.4.0"
rand = "0.8.5"
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.17"

[package.metadata.rust-analyzer]
check-cfg = ["cfg(debug_mode_verbose)"]
[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(debug_mode_verbose)"] }
